tests/invalid/enum/variant_lifetime_constructor_missing_arg.facet
enum Hidden<T> {
  Borrowed<'a>(unrestricted &'a affine T),
  Empty
}

fn make<'x>(r: unrestricted &'x affine isize) -> unrestricted Hidden<affine isize> {
  Hidden<affine isize>::Borrowed(r)
}
